third_party/clingo-sys/clingo/libclingo/clingo/control.hh

// {{{1 declaration of Propagator

using PropagateControl = clingo_propagate_control;